--- a/res/layout/activity_calendar.xml
+++ b/res/layout/activity_calendar.xml
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
-        <com.squareup.timessquare.CalendarPickerView
+       <!--  <com.squareup.timessquare.CalendarPickerView
             android:id="@+id/calendar_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -54,12 +54,13 @@
             android:paddingBottom="16dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            android:scrollbarStyle="outsideOverlay" />
+            android:scrollbarStyle="outsideOverlay" />--> 
 
         <Button
             android:id="@+id/done_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="onFinish"
             android:text="Done" />
     </LinearLayout>
 
