--- a/res/layout/activity_calendar.xml
+++ b/res/layout/activity_calendar.xml
@@ -39,22 +39,17 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <LinearLayout
-      	android:layout_below="@id/tvChooseDates"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/tvChooseDates"
         android:orientation="vertical" >
 
-       <!--  <com.squareup.timessquare.CalendarPickerView
-            android:id="@+id/calendar_view"
+        <LinearLayout
+            android:id="@+id/calendar1"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="#FFFFFF"
-            android:clipToPadding="false"
-            android:paddingBottom="16dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:scrollbarStyle="outsideOverlay" />--> 
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+        </LinearLayout>
 
         <Button
             android:id="@+id/done_button"
