--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -4,4 +4,5 @@
     <color name="blue">#ff33b5e5</color>
     <color name="white">#ffffff</color>
     <color name ="black">#000000</color>
+    <color name="pink">#ff69b4</color>
 </resources>
