--- a/res/layout/activity_events.xml
+++ b/res/layout/activity_events.xml
@@ -8,4 +8,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".EventsActivity" >
 
+    <ListView
+        android:id="@+id/lvEvents"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="15dp" >
+    </ListView>
+
 </RelativeLayout>
