--- a/res/layout/activity_events.xml
+++ b/res/layout/activity_events.xml
@@ -11,10 +11,10 @@
     <ListView
         android:id="@+id/lvEvents"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="15dp" >
+        >
     </ListView>
 
 </RelativeLayout>
