--- a/res/layout/profile_pic_item.xml
+++ b/res/layout/profile_pic_item.xml
@@ -7,15 +7,15 @@
         android:id="@+id/ivProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp" />
+        android:background="@drawable/custom_imageview"
+       
+        android:layout_margin="10dp"/>
 
     <TextView
         android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_margin="10dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@color/black" />
 
