added borders, removed unnnecessary code

--- a/res/layout/activity_calendar.xml
+++ b/res/layout/activity_calendar.xml
@@ -54,7 +54,8 @@
             android:id="@+id/calendar1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:background="@drawable/border_calendar" >
         </LinearLayout>
 
         <Button
@@ -64,7 +65,8 @@
             android:onClick="onFinish"
             style="@style/NiceButton"
             android:layout_marginTop="10dp"
-            android:text="Done" />
+            android:text="Done" 
+            />
     </LinearLayout>
 
 </RelativeLayout>
