--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -11,14 +11,17 @@
             backward-compatibility can go here.
         -->
     </style>
-   <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
+   <style name="MyActionBar" parent="@android:style/Widget.Holo.ActionBar">
         <item name="android:background">@color/theme_pink</item>
         <item name = "android:textColor">@color/white</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
     </style>
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <item name="android:actionBarStyle">@style/MyActionBar</item>
+        
+        
         
         
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
