--- a/res/drawable/nice_button_focused.xml
+++ b/res/drawable/nice_button_focused.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-     <solid
+
+    <!--
+        <solid
         android:color="#db277c"  />
-    <padding android:left="15dp"
-        android:top="1dp"
+    -->
+    <gradient
+        android:angle="90"
+        android:endColor="#D9853B"
+        android:startColor="#dc914e" />
+
+    <padding
+        android:bottom="1dp"
+        android:left="15dp"
         android:right="15dp"
-        android:bottom="1dp" />
+        android:top="1dp" />
+
     <stroke
         android:width="1dp"
         android:color="#db277c" />
+
     <corners android:radius="8dp" />
 
 </shape>
