--- a/res/drawable/nice_button_pressed.xml
+++ b/res/drawable/nice_button_pressed.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <solid android:color="#db277c" />
+    <!-- <solid android:color="#db277c" /> -->
+    <gradient
+        android:angle="90"
+        android:endColor="#D9853B"
+        android:startColor="#e09d62" />
 
     <padding
         android:bottom="1dp"
@@ -11,7 +15,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="#db277c" />
+        android:color="#e09d62" />
 
     <corners android:radius="8dp" />
 
