added event - invitee response object changed calendar GUI - removed choose a date text view to have room for Done button.

--- a/res/layout/activity_calendar.xml
+++ b/res/layout/activity_calendar.xml
@@ -33,21 +33,22 @@
         
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <TextView
-        android:id="@+id/tvChooseDates"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@id/tvEventTitle"
-        android:layout_marginTop="10dp"
-        android:text="Choose your dates: "
+<!--     <TextView -->
+<!--         android:id="@+id/tvChooseDates" -->
+<!--         android:layout_width="wrap_content" -->
+<!--         android:layout_height="wrap_content" -->
+<!--         android:layout_alignParentLeft="true" -->
+<!--         android:layout_below="@id/tvEventTitle" -->
+<!--         android:layout_marginTop="10dp" -->
+<!--         android:text="Choose your dates: " -->
         
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+<!--         android:textAppearance="?android:attr/textAppearanceMedium" /> -->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tvChooseDates"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/tvEventTitle"
         android:orientation="vertical" >
 
         <LinearLayout
