--- a/res/layout/profile_pic_item.xml
+++ b/res/layout/profile_pic_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -8,15 +8,32 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/custom_imageview"
-       
         android:layout_margin="10dp"/>
 
-    <TextView
+    <LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent" 
+	    android:layout_toRightOf="@+id/ivProfile"
+	    android:orientation="vertical">
+	    
+        <TextView
         android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@color/black" />
+    
+	    <TextView
+	        android:id="@+id/tvMessage"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:textColor="@color/gray"
+	        android:layout_marginLeft="8dp" 
+	        android:layout_marginBottom="8dp"
+	        android:text="Message"/>
+    </LinearLayout>
+    
 
-</LinearLayout>
+</RelativeLayout>
