using fragment for loading events list and separated event and contact XMLs.

--- a/res/layout/activity_events.xml
+++ b/res/layout/activity_events.xml
@@ -16,5 +16,11 @@
         android:layout_alignParentTop="true"
         >
     </ListView>
+    
+    <FrameLayout
+       android:id="@+id/flEvents"
+       android:layout_height="match_parent"
+       android:layout_width="match_parent">
+    </FrameLayout>
 
 </RelativeLayout>
