--- a/res/layout/profile_pic_item.xml
+++ b/res/layout/profile_pic_item.xml
@@ -1,38 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent" 
+    android:padding="8dp">
 
     <ImageView
         android:id="@+id/ivProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/custom_imageview"
-        android:layout_margin="10dp"/>
-
-    <LinearLayout
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent" 
-	    android:layout_toRightOf="@+id/ivProfile"
-	    android:orientation="vertical">
+        android:background="@drawable/custom_imageview"/>
 	    
-        <TextView
+    <TextView
         android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="8dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@color/black" />
-    
-	    <TextView
-	        android:id="@+id/tvMessage"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_marginLeft="8dp" 
-	        android:layout_marginBottom="8dp"
-	        android:text="Message"/>
-    </LinearLayout>
-    
+        android:layout_toRightOf="@+id/ivProfile"
+        android:textColor="@color/black" 
+        android:layout_marginTop="6dp"
+        android:layout_marginLeft="6dp"/>
 
 </RelativeLayout>
